--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "401 Labs",
   "main": "index.js",
   "devDependencies": {
+    "babel-preset-stage-2": "^6.24.1",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
     "jest": "^21.2.1",
